# BMX055-Arduino-Library

./: CMakeLists.txt
src/: BMX055.cpp  BMX055.h
